<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gestionar_servidor"
            android:icon="@drawable/ic_gestionar"
            android:title="@string/gestionar_servidor" />
        <item
            android:id="@+id/nav_buscar_servidor"
            android:icon="@drawable/ic_search"
            android:title="@string/buscar_servidor" />
        <item
            android:id="@+id/nav_listado_servidores"
            android:icon="@drawable/ic_lista"
            android:title="@string/listado_servidores" />

        <item
            android:id="@+id/nav_log_acceso"
            android:icon="@drawable/ic_log"
            android:title="@string/log_acceso" />

        <item
            android:id="@+id/nav_servidor_prod"
            android:icon="@drawable/ic_api"
            android:title="Api Servidores" />

        <item
            android:id="@+id/nav_compartir"
            android:icon="@drawable/ic_share"
            android:title="@string/compartir" />

        <item
            android:id="@+id/nav_database_api"
            android:icon="@drawable/ic_databaseapi"
            android:title="@string/database_api" />

    </group>
</menu>